--- a/pages/home.html
+++ b/pages/home.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title></title>
-  <link rel="stylesheet" type="text/css" href="./pages_css/homepage.css">
+  <link rel="stylesheet" type="text/css" href="../css/pages_css/homepage.css">
   <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@200&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
   <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
@@ -13,8 +13,8 @@
             <div class="logo"><h1><a href="../index.html">My India</a></h1></div>
             <div class="menu">
               <a href="../pages/home.html">Home</a>
-              <a href="../pages/places.html">palces</a>
-              <a href="#">about</a>
+              <a href="../pages/places.html">places</a>
+              <a href="../pages/our_team.html">our team</a>
               <a href="#">contact</a>
             </div>
           </nav>
