--- a/pages/places.html
+++ b/pages/places.html
@@ -2,10 +2,11 @@
 <html>
 <head>
   <title></title>
-  <link rel="stylesheet" type="text/css" href="./pages_css/places1.css">
+  <link rel="stylesheet" type="text/css" href="../css/pages_css/places1.css">
   <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@200&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
   <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/ef90a4be84.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <header>
@@ -14,8 +15,8 @@
             <div class="logo"><h1><a href="../index.html">My India</a></h1></div>
             <div class="menu">
               <a href="../pages/home.html">Home</a>
-              <a href="../pages/places.html">palces</a>
-              <a href="#">about</a>
+              <a href="../pages/places.html">places</a>
+              <a href="../pages/our_team.html">our team</a>
               <a href="https://traveltriangle.com/blog/places-to-visit-in-india-before-you-turn-30/" target="_blank">contact</a>
             </div>
           </nav>
@@ -71,7 +72,6 @@
     <div class="grid_view"><a href="#" class="img_47"><img src="../images/historical/Victor_Jubliee_Palace.jpg" alt="no image found"></a></div>
     <div class="grid_view"><a href="#" class="img_48"><img src="../images/historical/Leh_palace.jpg" alt="no image found"></a></div>
     <div class="grid_view"><a href="#" class="img_49"><img src="../images/historical/gate_way_of_India.jpg" alt="no image found"></a></div>
-    <a href="#" class="noth"><i class="fas fa-level-up-alt"></i></a>
     <footer>
       <div class="footer-content">
         <h3>Historical Places</h3>
@@ -87,5 +87,6 @@
         <p>copyrights &copy;2021 SVREC. Designed by <span>SVREC TEAM</span></p>
       </div>
     </footer>
+    <a href="#" class="gotop"><i class="fas fa-angle-double-up"></i></a>
 </body>
 </html>
