--- a/pages/our_team.html
+++ b/pages/our_team.html
@@ -14,7 +14,7 @@
             <div class="logo"><h1><a href="../index.html">My India</a></h1></div>
             <div class="menu">
               <a href="../pages/home.html">Home</a>
-              <a href="../pages/places.html">palces</a>
+              <a href="../pages/places.html">places</a>
               <a href="../pages/our_team.html">our team</a>
               <a href="#">contact</a>
             </div>
