modified home html & css

--- a/pages/home.html
+++ b/pages/home.html
@@ -20,7 +20,7 @@
           </nav>
           <div class="imageslide"></div>           
   </header>
-  <div class="type_container">
+  <div class="type_containe">
     <p class="break-word">Nature is the greatest blessing of Human kind. It is the presence of beautiful and attractive environment around us. Nature provides us peace, serenity and broadens our vision which provides enough sight to penetrate into the mysteries of the world.<br>
       India is the perfect example for the natural beauty. The reason for this is India being “Unity in Diversity”. With 28 states and 8 Union Territories, India is known for wide varieties of heritages, spices, spiritual places, philosophy, science and nature spots which depict the beauty of our country.<br>
       Each state with its own significance and specialty, India continues to amuse people with its serenity.<br>
