--- a/pages/our_team.html
+++ b/pages/our_team.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title></title>
+  <title>Do-visit | our_team</title>
   <link rel="stylesheet" type="text/css" href="../css/pages_css/our_team.css">
   <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@200&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
