updated the our with team details

--- a/pages/our_team.html
+++ b/pages/our_team.html
@@ -48,10 +48,86 @@
         <img src="../images/our_team_images/user.jpg" alt="Image not found">
       </div>
       <div class="details">
-        <h2>J V Dharani Dhar</h2>
-        <p>This is my first real-time project as a team lead and code developer. This is very much interesting to work 
+        <h2>Kedhara Lakshmi Nakka<p>-</h2>
+        <p>This is my first real-time project as a content curator. I believe that I can learn a lot more things from this project that would help my career.</p>
+      </div>
+    </div>
+    <div class="card">
+      <div class="imgbox">
+        <img src="../images/our_team_images/user.jpg" alt="Image not found">
+      </div>
+      <div class="details">
+        <h2>N. Mani keerthi Reddy<p>-</p></h2>
+        <p>This is my first real-time project with a team . This is very much interesting to work 
           on a web development as this site is a static and non-responsive site,
           I'm confident that we will make the relative changes in the web page and try our best to make it the best.</p>
+      </div>
+    </div>
+    <div class="card">
+      <div class="imgbox">
+        <img src="../images/our_team_images/user.jpg" alt="Image not found">
+      </div>
+      <div class="details">
+        <h2>Shaik Mubeena<p>-</p></h2>
+        <p>Good project.  It is good beginning to learn new technologies. </p>
+      </div>
+    </div>
+    <div class="card">
+      <div class="imgbox">
+        <img src="../images/our_team_images/user.jpg" alt="Image not found">
+      </div>
+      <div class="details">
+        <h2>Shahin Shaik<p>-</h2>
+        <p>I am excited to work in this project as I would be able to learn HTML and CSS and usage of GitHub for this project would improve my knowledge.</p>
+      </div>
+    </div>
+    <div class="card">
+      <div class="imgbox">
+        <img src="../images/our_team_images/user.jpg" alt="Image not found">
+      </div>
+      <div class="details">
+        <h2>Jonnalagadda mounika<p>-</h2>
+        <p>It is an awesome project and we are learning new things.</p>
+      </div>
+    </div>
+    <div class="card">
+      <div class="imgbox">
+        <img src="../images/our_team_images/user.jpg" alt="Image not found">
+      </div>
+      <div class="details">
+        <h2>Munaganuru Manideep<p>-</p></h2>
+        <p>Very good, I am enthusiastic to be a part of this project.</p>
+      </div>
+    </div>
+    <div class="card">
+      <div class="imgbox">
+        <img src="../images/our_team_images/user.jpg" alt="Image not found">
+      </div>
+      <div class="details">
+        <h2>K.Kavitha<p>-</h2>
+        <p>This is my first real-time project with a team. This is very interesting to work 
+          on a web development as this site is a static and non-responsive site,
+          I'm confident that we will make the relative changes in the web page and try our best to make it the best.</p>
+      </div>
+    </div>
+    <div class="card">
+      <div class="imgbox">
+        <img src="../images/our_team_images/user.jpg" alt="Image not found">
+      </div>
+      <div class="details">
+        <h2>Raymond<p>-</h2>
+        <p>This is my first real-time project with a team. This is very much interesting to work 
+          on a web development as this site is a static and non-responsive site,
+          I'm confident that we will make the relative changes in the web page and try our best to make it the best.</p>
+      </div>
+    </div>
+    <div class="card">
+      <div class="imgbox">
+        <img src="../images/our_team_images/user.jpg" alt="Image not found">
+      </div>
+      <div class="details">
+        <h2>Salman<p>-</p></h2>
+        <p>I am pretty excited, feeling happy being part of this,this will help me to learn practically as I am learning now.</p>
       </div>
     </div>
     <div class="card">
@@ -70,8 +146,8 @@
         <img src="../images/our_team_images/user.jpg" alt="Image not found">
       </div>
       <div class="details">
-        <h2>J V Dharani Dhar</h2>
-        <p>This is my first real-time project as a team lead and code developer. This is very much interesting to work 
+        <h2>Shaik Afsana<p>-</p></h2>
+        <p>This is my first real-time project with a team . This is very much interesting to work 
           on a web development as this site is a static and non-responsive site,
           I'm confident that we will make the relative changes in the web page and try our best to make it the best.</p>
       </div>
@@ -81,8 +157,8 @@
         <img src="../images/our_team_images/user.jpg" alt="Image not found">
       </div>
       <div class="details">
-        <h2>J V Dharani Dhar</h2>
-        <p>This is my first real-time project as a team lead and code developer. This is very much interesting to work 
+        <h2>K.JSSTPRAKASH<p>-</p></h2>
+        <p>This is my first real-time project with a team. This is very much interesting to work 
           on a web development as this site is a static and non-responsive site,
           I'm confident that we will make the relative changes in the web page and try our best to make it the best.</p>
       </div>
@@ -92,10 +168,8 @@
         <img src="../images/our_team_images/user.jpg" alt="Image not found">
       </div>
       <div class="details">
-        <h2>J V Dharani Dhar</h2>
-        <p>This is my first real-time project as a team lead and code developer. This is very much interesting to work 
-          on a web development as this site is a static and non-responsive site,
-          I'm confident that we will make the relative changes in the web page and try our best to make it the best.</p>
+        <h2>Saibhavana<p>-</h2>
+        <p>Good and it helps in improving our knowledge</p>
       </div>
     </div>
     <div class="card">
@@ -103,10 +177,8 @@
         <img src="../images/our_team_images/user.jpg" alt="Image not found">
       </div>
       <div class="details">
-        <h2>J V Dharani Dhar</h2>
-        <p>This is my first real-time project as a team lead and code developer. This is very much interesting to work 
-          on a web development as this site is a static and non-responsive site,
-          I'm confident that we will make the relative changes in the web page and try our best to make it the best.</p>
+        <h2>L Supriya<p>-</h2>
+        <p>Yes, it is easy and happy to work with you and also I am learning new things with this. I hope this will helps tourist to know more about the tourist spots in India. </p>
       </div>
     </div>
     <div class="card">
@@ -114,98 +186,8 @@
         <img src="../images/our_team_images/user.jpg" alt="Image not found">
       </div>
       <div class="details">
-        <h2>J V Dharani Dhar</h2>
-        <p>This is my first real-time project as a team lead and code developer. This is very much interesting to work 
-          on a web development as this site is a static and non-responsive site,
-          I'm confident that we will make the relative changes in the web page and try our best to make it the best.</p>
-      </div>
-    </div>
-    <div class="card">
-      <div class="imgbox">
-        <img src="../images/our_team_images/user.jpg" alt="Image not found">
-      </div>
-      <div class="details">
-        <h2>J V Dharani Dhar</h2>
-        <p>This is my first real-time project as a team lead and code developer. This is very much interesting to work 
-          on a web development as this site is a static and non-responsive site,
-          I'm confident that we will make the relative changes in the web page and try our best to make it the best.</p>
-      </div>
-    </div>
-    <div class="card">
-      <div class="imgbox">
-        <img src="../images/our_team_images/user.jpg" alt="Image not found">
-      </div>
-      <div class="details">
-        <h2>J V Dharani Dhar</h2>
-        <p>This is my first real-time project as a team lead and code developer. This is very much interesting to work 
-          on a web development as this site is a static and non-responsive site,
-          I'm confident that we will make the relative changes in the web page and try our best to make it the best.</p>
-      </div>
-    </div>
-    <div class="card">
-      <div class="imgbox">
-        <img src="../images/our_team_images/user.jpg" alt="Image not found">
-      </div>
-      <div class="details">
-        <h2>J V Dharani Dhar</h2>
-        <p>This is my first real-time project as a team lead and code developer. This is very much interesting to work 
-          on a web development as this site is a static and non-responsive site,
-          I'm confident that we will make the relative changes in the web page and try our best to make it the best.</p>
-      </div>
-    </div>
-    <div class="card">
-      <div class="imgbox">
-        <img src="../images/our_team_images/user.jpg" alt="Image not found">
-      </div>
-      <div class="details">
-        <h2>J V Dharani Dhar</h2>
-        <p>This is my first real-time project as a team lead and code developer. This is very much interesting to work 
-          on a web development as this site is a static and non-responsive site,
-          I'm confident that we will make the relative changes in the web page and try our best to make it the best.</p>
-      </div>
-    </div>
-    <div class="card">
-      <div class="imgbox">
-        <img src="../images/our_team_images/user.jpg" alt="Image not found">
-      </div>
-      <div class="details">
-        <h2>J V Dharani Dhar</h2>
-        <p>This is my first real-time project as a team lead and code developer. This is very much interesting to work 
-          on a web development as this site is a static and non-responsive site,
-          I'm confident that we will make the relative changes in the web page and try our best to make it the best.</p>
-      </div>
-    </div>
-    <div class="card">
-      <div class="imgbox">
-        <img src="../images/our_team_images/user.jpg" alt="Image not found">
-      </div>
-      <div class="details">
-        <h2>J V Dharani Dhar</h2>
-        <p>This is my first real-time project as a team lead and code developer. This is very much interesting to work 
-          on a web development as this site is a static and non-responsive site,
-          I'm confident that we will make the relative changes in the web page and try our best to make it the best.</p>
-      </div>
-    </div>
-    <div class="card">
-      <div class="imgbox">
-        <img src="../images/our_team_images/user.jpg" alt="Image not found">
-      </div>
-      <div class="details">
-        <h2>J V Dharani Dhar</h2>
-        <p>This is my first real-time project as a team lead and code developer. This is very much interesting to work 
-          on a web development as this site is a static and non-responsive site,
-          I'm confident that we will make the relative changes in the web page and try our best to make it the best.</p>
-      </div>
-    </div>
-    <div class="card">
-      <div class="imgbox">
-        <img src="../images/our_team_images/user.jpg" alt="Image not found">
-      </div>
-      <div class="details">
-        <h2>J V Dharani Dhar</h2>
-        <p>This is my first real-time project as a team lead and code developer. This is very much interesting to work 
-          on a web development as this site is a static and non-responsive site,
-          I'm confident that we will make the relative changes in the web page and try our best to make it the best.</p>
+        <h2>Patti Manisha Rani<p>-</h2>
+        <p>It is good and it improved my knowledge </p>
       </div>
     </div>
   </div>
