justified the content

--- a/pages/our_team.html
+++ b/pages/our_team.html
@@ -135,8 +135,8 @@
         <img src="../images/our_team_images/user.jpg" alt="Image not found">
       </div>
       <div class="details">
-        <h2>J V Dharani Dhar</h2>
-        <p>This is my first real-time project as a team lead and code developer. This is very much interesting to work 
+        <h2>V. Aruna Kumari <p>-</h2>
+        <p>This is my first real-time project with a team. This is very much interesting to work 
           on a web development as this site is a static and non-responsive site,
           I'm confident that we will make the relative changes in the web page and try our best to make it the best.</p>
       </div>
