--- a/pages/historical_pages/hari_parat_fort.html
+++ b/pages/historical_pages/hari_parat_fort.html
@@ -13,7 +13,7 @@
             <div class="logo"><h1><a href="../../index.html">My India</a></h1></div>
             <div class="menu">
               <a href="../home.html">Home</a>
-              <a href="../places.html">palces</a>
+              <a href="../places.html">places</a>
               <a href="../our_team.html">our team</a>
               <a href="../contact.html">contact</a>
             </div>
