added the icon and updated the pages

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@200&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
 <meta name="keywords" content="INDIA,india,trip,tourism,travel,visit,historical places,piligrimages,hill stations,view points,do-visit,dovisit.me,visit.me"/>
+<link rel="icon" href="images/icon.jpg" type="image">
 </head>
 <body>
   <header>
