--- a/pages/contact.html
+++ b/pages/contact.html
@@ -8,6 +8,8 @@
   <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
   <link rel="stylesheet" href="../css/pages_css/contactpage.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+  <meta name="keywords" content="INDIA,india,trip,tourism,travel,visit,historical places,piligrimages,hill stations,view points,do-visit,dovisit.me,visit.me"/>
+  <link rel="icon" href="../images/icon.jpg" type="image">
 </head>
 <body>
   <header>
